--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>大事件</title>
   <!-- 导入layUI的css文件 -->
   <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
@@ -52,9 +53,9 @@
           <li class="layui-nav-item">
             <a href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-              <dd><a href=""><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+              <dd><a href="/article/art_cate.html" target="fs"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
+              <dd><a href="/article/art_list.html" target="fs"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+              <dd><a href="/article/art_pub.html" target="fs"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item"><a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
